# http_router

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  build_libcxx.sh
.cursor/: rules
.promptx/resource/: project.registry.json
.promptx/resource/domain/cpp-expert/: cpp-expert.role.md
.promptx/resource/domain/cpp-expert/execution/: cpp-development-workflow.execution.md  google-style-guide.execution.md
.promptx/resource/domain/cpp-expert/knowledge/: cpp-expertise.knowledge.md  google-cpp-standards.knowledge.md
.promptx/resource/domain/cpp-expert/thought/: cpp-expert-thinking.thought.md
doc/: bug_fixes.hpp  http_router_api_reference.md  http_router_documentation.md  http_router_implementation_details.md  router_group_analysis.md  完整分析报告.md
examples/: README.md  advanced_routing.cpp  basic_usage.cpp  http_methods.cpp  performance_benchmark.cpp
include/: http_router.hpp
include/router/: router.hpp  router_group.hpp  router_impl.hpp  router_optimized.hpp
tests/: CMakeLists.txt  http_router_adv_test.cpp  http_router_cache_test.cpp  http_router_hybrid_test.cpp  http_router_performance_test.cpp  http_router_stress_test.cpp  http_router_test.cpp  lambda_context_test.cpp  massive_lambda_performance_test.cpp  massive_lambda_performance_test_fixed.cpp  router_optimization_integration_test.cpp  router_optimization_test.cpp  router_optimization_test.cpp.bak  router_performance_test.cpp  router_simple_test.cpp  simple_test.cpp  test_router.cpp  test_router_group.cpp
